css file moved one level up

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 	<title>HOME</title>
 
-<link href="css/main.css" rel="stylesheet"> <!--CSS common style for all templates-->
+<link href="main.css" rel="stylesheet"> <!--CSS common style for all templates-->
 
 <link href="css/index.css" rel="stylesheet"> <!-- CSS style for Index page -->
 
